# listup_aws_resources

./: .envrc  .gitignore  .prompt.md  CHANGELOG.md  GEMINI.md  README.md  listup_aws_resources.py  listup_security_groups.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
resources/: amis.py  auto_scaling_groups.py  dynamodb.py  ebs.py  ebs_snapshot.py  ec2.py  ecr.py  eip.py  eks.py  elasticache.py  elb.py  global_accelerator.py  glue_job.py  internet_gateway.py  kinesis_firehose.py  kinesis_streams.py  nat_gateway.py  rds.py  route53_hostedzone.py  s3_buckets.py  secrets_manager.py  security_group_rules.py  security_groups.py  ses_identity.py  subnets.py  vpc.py  vpc_endpoint.py
tests/: test_datetime_format.py  test_ec2.py  test_listup_aws_resources.py  test_s3_buckets.py  test_security_group_rules.py  test_security_groups.py  test_ses_identity.py
utils/: __init__.py  datetime_format.py  name_tag.py
