[project]
name = "listup-aws-resources"
version = "1.0.0"
description = "AWS 리소스를 나열하고 정리하는 스크립트"
authors = [
    {name = "KKamJi", email = "xowl5460@naver.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.23",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py313']