[project]
name = "listup-aws-resources"
version = "1.3.0"
description = "AWS 리소스를 나열하고 정리하는 스크립트"
authors = [
    {name = "KKamJi", email = "xowl5460@naver.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.0",
    "botocore>=1.34.0",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff",
]

[tool.setuptools]
packages = ["resources", "utils"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
